{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1503,
  "lineage": "59f34664-1406-b092-c365-3139e1949455",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "LB_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/frontendIPConfigurations/frontend-ip",
                "name": "frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/publicIPAddresses/test-public-ip"
              }
            ],
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB",
            "location": "westus",
            "name": "test_LB",
            "resource_group_name": "test-resource_group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP_test",
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "test_lb_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/backendAddressPools/test-backend-pool",
            "loadbalancer_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB",
            "name": "test-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.LB_test",
            "azurerm_public_ip.publicIP_test",
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "ssh_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/probes/ssh-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB",
            "name": "ssh-probe",
            "number_of_probes": 2,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.LB_test",
            "azurerm_public_ip.publicIP_test",
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "test_lb_Probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.LB_test",
            "azurerm_public_ip.publicIP_test",
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/backendAddressPools/test-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/frontendIPConfigurations/frontend-ip",
            "frontend_ip_configuration_name": "frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB",
            "name": "http-rule",
            "probe_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.LB_test",
            "azurerm_lb_backend_address_pool.test_lb_backend_pool",
            "azurerm_lb_probe.test_lb_Probe",
            "azurerm_public_ip.publicIP_test",
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ssh_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/backendAddressPools/test-backend-pool"
            ],
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/frontendIPConfigurations/frontend-ip",
            "frontend_ip_configuration_name": "frontend-ip",
            "frontend_port": 22,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/loadBalancingRules/test-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB",
            "name": "test-rule",
            "probe_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/probes/ssh-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.LB_test",
            "azurerm_lb_backend_address_pool.test_lb_backend_pool",
            "azurerm_lb_probe.ssh_probe",
            "azurerm_public_ip.publicIP_test",
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_sub1_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub1-vm1",
            "internal_domain_name_suffix": "4kjnniilittefa3fqe5naq2uic.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/publicIPAddresses/public-ip-vm1",
                "subnet_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic-sub1-vm1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "test-resource_group"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP_vm1",
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_sub1_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub1-vm2",
            "internal_domain_name_suffix": "4kjnniilittefa3fqe5naq2uic.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic-sub1-vm2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-resource_group"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_sub3_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub3-vm",
            "internal_domain_name_suffix": "4kjnniilittefa3fqe5naq2uic.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration3",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/publicIPAddresses/public-ip-vm3",
                "subnet_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub3"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic-sub3-vm",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "test-resource_group"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP_vm3",
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic_sub3_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/backendAddressPools/test-backend-pool",
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub3-vm/ipConfigurations/testconfiguration3|/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/loadBalancers/test_LB/backendAddressPools/test-backend-pool",
            "ip_configuration_name": "testconfiguration3",
            "network_interface_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub3-vm"
          },
          "dependencies": [
            "azurerm_lb.LB_test",
            "azurerm_lb_backend_address_pool.test_lb_backend_pool",
            "azurerm_network_interface.nic_sub3_vm",
            "azurerm_public_ip.publicIP_test",
            "azurerm_public_ip.publicIP_vm3",
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Nic_1_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub1-vm1|/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub1",
            "network_interface_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub1-vm1",
            "network_security_group_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub1"
          },
          "dependencies": [
            "azurerm_network_interface.nic_sub1_vm1",
            "azurerm_network_security_group.nsg_sub1",
            "azurerm_public_ip.publicIP_vm1",
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Nic_2_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub1-vm2|/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub1",
            "network_interface_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub1-vm2",
            "network_security_group_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub1"
          },
          "dependencies": [
            "azurerm_network_interface.nic_sub1_vm2",
            "azurerm_network_security_group.nsg_sub1",
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Nic_3_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub3-vm|/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub3",
            "network_interface_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkInterfaces/nic-sub3-vm",
            "network_security_group_id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub3"
          },
          "dependencies": [
            "azurerm_network_interface.nic_sub3_vm",
            "azurerm_network_security_group.nsg_sub3",
            "azurerm_public_ip.publicIP_vm3",
            "azurerm_resource_group.test_RG",
            "azurerm_subnet.test_SUBNET",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub1",
            "location": "westus",
            "name": "nsg-sub1",
            "resource_group_name": "test-resource_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Load-Balancer",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/networkSecurityGroups/nsg-sub3",
            "location": "westus",
            "name": "nsg-sub3",
            "resource_group_name": "test-resource_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Internal",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Load-Balancer",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/publicIPAddresses/test-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.64.8.235",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "test-public-ip",
            "resource_group_name": "test-resource_group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/publicIPAddresses/public-ip-vm1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.73.32.189",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public-ip-vm1",
            "resource_group_name": "test-resource_group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP_vm3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/publicIPAddresses/public-ip-vm3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.73.32.133",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public-ip-vm3",
            "resource_group_name": "test-resource_group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test_SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sub1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub1",
            "name": "sub1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-resource_group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG",
            "azurerm_virtual_network.test_VNET"
          ]
        },
        {
          "index_key": "sub2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub2",
            "name": "sub2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-resource_group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG",
            "azurerm_virtual_network.test_VNET"
          ]
        },
        {
          "index_key": "sub3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub3",
            "name": "sub3",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-resource_group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG",
            "azurerm_virtual_network.test_VNET"
          ]
        },
        {
          "index_key": "sub4",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/sub4",
            "name": "sub4",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-resource_group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG",
            "azurerm_virtual_network.test_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test_VNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a1d692f2-440b-42e6-83a5-813ed0439442",
            "id": "/subscriptions/f1ecd7ae-5b1e-4316-9c95-0d105138ac45/resourceGroups/test-resource_group/providers/Microsoft.Network/virtualNetworks/test-vnet",
            "location": "westus",
            "name": "test-vnet",
            "resource_group_name": "test-resource_group"
          },
          "dependencies": [
            "azurerm_resource_group.test_RG"
          ]
        }
      ]
    }
  ]
}